# data_validator

./: CHECKLIST.md  CODE_CHANGE_CHECKLIST.md  DATABRICKS.md  README.md  pipeline_state.json  pyproject.toml  recoverable_pipeline_state.json
.github/: copilot-instructions.md
docs/: IDEMPOTENCY.md  README.md  architecture_overview.md  cli_usage.md  config_merge.md  databricks_job.md  getting_started.md  in_memory_duckdb.md  pipeline_state.md  roadmap.md  user_guide.md
examples/: cli_demo.py  config_merge_demo.py  customers.csv  databricks_config.yaml  databricks_job_demo.py  databricks_usage.py  demo_config.yaml  demo_validation.py  dlt_integration.py  duckdb_config.yaml  duckdb_sql_demo.py  example_usage.py  orders.csv  pipeline_config.yaml  pipeline_demo.py  polars_config.yaml  quickstart.py  recoverable_config.yaml  recoverable_sources.yaml  sample_config.yaml  sources.yaml  sql_rules_config.yaml
src/data_validator/: __init__.py  cli.py  config.py  databricks_job.py  databricks_utils.py  settings.py  state.py  validator.py
src/data_validator/engines/: __init__.py  databricks_engine.py  duckdb_engine.py  polars_engine.py  pyspark_engine.py
tests/: __init__.py  test_cli.py  test_config.py  test_databricks.py  test_databricks_job.py  test_demo_script.py  test_idempotency.py  test_integration.py  test_settings.py  test_sql_rules.py  test_state.py  test_validator.py
