[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data_validator"
version = "0.1.0"
description = "A flexible data validation module using YAML configuration for Spark DataFrames with support for multiple compute engines"
authors = ["Data Validator Team"]
readme = "README.md"
packages = [{include = "data_validator", from = "src"}]

[tool.poetry.scripts]
data-validator-job = "data_validator.databricks_job:main"

[project]
name = "data_validator"
version = "0.1.0"
description = "A flexible data validation module using YAML configuration for Spark DataFrames with support for multiple compute engines"
authors = [
    {name = "Data Validator Team"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "databricks-labs-dqx>=0.1.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.3.0",
]
duckdb = [
    "duckdb>=0.8.0",
    "pandas>=1.5.0",
]
polars = [
    "polars>=0.18.0",
]
all = [
    "pyspark>=3.3.0",
    "duckdb>=0.8.0",
    "pandas>=1.5.0",
    "polars>=0.18.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/infinit3labs/data_validator"
Repository = "https://github.com/infinit3labs/data_validator"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]